started new branch, added meta data

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	<meta charset="utf-8">
 	<title>Yokai Gumi</title>
 
+	<meta name="description" content="Learn several key principles of classical martial arts and practical combat at a safe distance with the Yokai Gumi. Classes to be held in parks in Denver, CO through the summer and fall of 2020.">
+  	<meta name="keywords" content="staff, staff fighting, bo, bo staff, stick fighting, ninja, ninjutsu, denver, denver co, front range, colorado, classical martial arts, kurai kotori ryu, kurai kotori ninjutsu, kota ryu ninjutsu, hakko ryu, self-defense, martial arts, traditional martial arts, combat system, pole arms, bojutsu, staves, yokai gumi">
+  	<meta name="author" content="SQGLZ">
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	<style type="text/css">
 		.main-image {
 			display: block;
