styling well begun

--- a/index.html
+++ b/index.html
@@ -10,52 +10,121 @@
   	<meta name="author" content="SQGLZ">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<style type="text/css">
-		.main-image {
-			display: block;
-			margin-top: 5vh;
-			margin-left: 50%;
-			transform: translateX(-50%);
-			max-width: 60%;
-		}
+	<link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,400;0,900;1,200;1,400;1,700&display=swap" rel="stylesheet">
 
-		footer {
-			position: fixed;
-			bottom: 0;
-			margin-left: 50%;
-			transform: translateX(-50%);
-			padding: .8rem;
-
-			width: 80vw;
-			border-top-right-radius: 15px;
-			border-top-left-radius: 15px;
-			background-color: #303825;
-			text-align: center;
-		}
-
-		.the-question {
-			font-family: 'Open Sans Condensed', sans-serif;
-			font-size: 1.8rem;
-			color: white;
-		}
-
-		.teaser {
-			font-family: 'Open Sans Condensed', sans-serif;
-			font-size: 1.2rem;
-			color: white;
-		}
-	</style>
-
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="styles/type.css">
+	<link rel="stylesheet" type="text/css" href="styles/layout.css">
+	<link rel="stylesheet" type="text/css" href="styles/ui.css">
+	<link rel="stylesheet" type="text/css" href="styles/graphics.css">
 </head>
 <body>
 
-	<img class="main-image" src="lettering-i.png" alt="yokai gumi written in rough roundhand calligraphy" nopin="nopin">
+	
+	<div class="layout__content-main">
 
-	<footer>
+		<h1>Combative Staff</h1>
+		<h5>with the Yokai Gumi</h5>
+
+		<p>During this period of warm months and social distancing, the Yokai Gumi school of the Kurai Kotori Ryu will be studying the long staff in public parks in Denver, CO.</p>
+
+		<p>Few weapons are more universal than the staff. Staves of various lengths and heft exist throughout classical martial arts and contemporary combat systems, and they have never ceased to be relevant tools in circumstances of high conflict.</p>
+
+		<iframe class="layout__video" src="https://www.youtube.com/embed/4KGHq9AqmEs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <!-- width="560" height="315" -->
+
+		<p>Using a curriculum centered on three fundamental aspects of fighting which are particularly salient in the study of pole arms, students will hone transferable skills which will benefit all of their martial studies:</p>
+
+		<img class="graphics__slide" src="img/power.jpg" alt="develop power through core dynamics" nopin="nopin">
+		<h3>CORE BODY DYNAMICS</h3>
+		<p>You've heard that a weapon (or any tool) should be treated as an extension of yourself. But, that advice is pretty abstract and hard to use if you don't understand how to make that happen. This curriculum emphasizes the generation of power in core muscle groups and the orientation of the limbs to reduce wasted and contradictory motions which diminish and misdirect energy. In this way, the student learns to extend force from their center, through the limbs, through the weapon, and into the target.</p>
+
+		<img class="graphics__slide" src="img/distancing.jpg" alt="control the fight with strategic distancing" nopin="nopin">
+		<h3>STRATEGIC DISTANCING</h3>
+		<p>You've heard that a weapon (or any tool) should be treated as an extension of yourself. But, that advice is pretty abstract and hard to use if you don't understand how to make that happen. This curriculum emphasizes the generation of power in core muscle groups and the orientation of the limbs to reduce wasted and contradictory motions which diminish and misdirect energy. In this way, the student learns to extend force from their center, through the limbs, through the weapon, and into the target.</p>
+
+		<img class="graphics__slide" src="img/dexterity.jpg" alt="maintain your defense through dexterity" nopin="nopin">
+		<h3>WEAPONS CONTROL &#38; RETENTION</h3>
+		<p>The staff can be a cumbersome tool to wield — more advanced pole arms are even more so. Poor grip shape during a clash, or even a strike, can send your staff flying out of your control. In these classes, the student will learn what facilitates consistent control of the weapon, especially while clashing and parrying with opponents.</p>
+
+		<div class="ui__question-box">
+			<div id="q-started class="ui__question-top">
+				<h4 class="ui__question">How do I get started?</h4>	
+			</div><!-- QUESTION TOP -->
+			<div id="a-started" class="ui__question-bottom ui__closed">
+				<p>No need to enroll or RSVP, check the calendar here, find a class that you can make it to, and show up. For the first class, come a few minutes early to go over a little bit of paperwork and then you're all set.</p>
+			</div><!-- QUESTION BOTTOM -->
+		</div><!-- GETTING STARTED -->
+
+		<div class="ui__question-box">
+			<div id="q-started class="ui__question-top">
+				<h4 class="ui__question">Who is this training for?</h4>	
+			</div><!-- QUESTION TOP -->
+			<div id="a-started" class="ui__question-bottom ui__closed">
+				<p>Children and adults are both welcome and encouraged to attend. Children should be old enough and mature enough that they are both reading and could competitively play a game of Simon Says. Adults should be spry enough that they could play a game of pick up soccer or basketball and probably not end up in a hospital. That's it. If you're in that range then you're golden.</p>
+			</div><!-- QUESTION BOTTOM -->
+		</div><!-- GETTING STARTED -->
+
+		<div class="ui__question-box">
+			<div id="q-started class="ui__question-top">
+				<h4 class="ui__question">How much does this cost?</h4>	
+			</div><!-- QUESTION TOP -->
+			<div id="a-started" class="ui__question-bottom ui__closed">
+				<p>You're welcome to stop by at no cost — have a class on the house. If you decide to stick with it &#129315;, or if you just really believe in the cause, you can support the school on <a href="https://www.patreon.com/sqglz" target="_blank">Patreon</a>. If you won't make it in frequently you may pay for drop-in classes through <a href="https://paypal.me/deaconrodda" target="_blank">PayPal</a>, or just pass some cash to the instructor; ten dollars is reasonable.</p>
+			</div><!-- QUESTION BOTTOM -->
+		</div><!-- GETTING STARTED -->
+
+		<div class="ui__question-box">
+			<div id="q-started class="ui__question-top">
+				<h4 class="ui__question">Do I have to wear a mask?</h4>	
+			</div><!-- QUESTION TOP -->
+			<div id="a-started" class="ui__question-bottom ui__closed">
+				<p><strong>Short answer: no.</strong> We're training in a park. Just give people plenty of space and you don't need to wear a mask.</p>
+
+				<p><strong>Long answer: please do.</strong> It will help everyone to move around more easily and to get in close enough to hear when instructions are being given if students are in masks. That being said, we understand that we're doing exercise and that actually doing the training with limited air flow might not be a challenge everyone is ready for. Please, just be respectful of everyone's space and we'll all be just fine.</p>
+
+				<p>We will have a designated spot where people will clean and exchange staves.</p>
+
+				<a href="https://www.cyclingnews.com/features/belgian-study-on-safe-distancing-while-exercising-goes-viral/" target="_blank"><p>further reading</p></a>
+			</div><!-- QUESTION BOTTOM -->
+		</div><!-- GETTING STARTED -->
+
+		<div class="ui__question-box">
+			<div id="q-started class="ui__question-top">
+				<h4 class="ui__question">What should I bring?</h4>	
+			</div><!-- QUESTION TOP -->
+			<div id="a-started" class="ui__question-bottom ui__closed">
+				<p>Bring some water. Wear clothes that you feel comfortable in. We recommend full length pants, and — if you're going to be coming regularly — we have a dress code. I'm not going to lay that all out here because you shouldn't worry about anything other than making it in if you believe you will benefit from this training.</p>
+
+				<p>Really, we'd love to have you stop in and try this out. </p>
+			</div><!-- QUESTION BOTTOM -->
+		</div><!-- GETTING STARTED -->
+
+		<div class="layout__closing">
+			<p>Hope to see you soon,</p>
+
+			<p>Deacon Rodda<br>
+			2nd Dan Kurai Kotori Ryu</p>
+
+			<div class="layout__link-box">
+				
+			</div><!-- LINK BOX -->
+		</div><!-- CLOSING -->
+
+
+
+	</div><!-- CONTENT MAIN -->
+
+
+	<!--<img class="main-image" src="lettering-i.png" alt="yokai gumi written in rough roundhand calligraphy" nopin="nopin">-->
+
+	<!--<footer>
 		<span class="the-question">Who will you be on the worst day of your life?</span><br>
 		<span class="teaser"><em>more to come</em>.</span>
-	</footer>
+	</footer>-->
+
+	<script type="text/javascript">
+		
+
+	</script>
 
 </body>
 </html>
