typesetting mostly done

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 		<p>Few weapons are more universal than the staff. Staves of various lengths and heft exist throughout classical martial arts and contemporary combat systems, and they have never ceased to be relevant tools in circumstances of high conflict.</p>
 
-		<iframe class="layout__video" src="https://www.youtube.com/embed/4KGHq9AqmEs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <!-- width="560" height="315" -->
+		<iframe class="graphics__video" src="https://www.youtube.com/embed/4KGHq9AqmEs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <!-- width="560" height="315" -->
 
 		<p>Using a curriculum centered on three fundamental aspects of fighting which are particularly salient in the study of pole arms, students will hone transferable skills which will benefit all of their martial studies:</p>
 
