done, for now, maybe

--- a/index.html
+++ b/index.html
@@ -39,18 +39,20 @@
 
 		<img class="graphics__slide" src="img/distancing.jpg" alt="control the fight with strategic distancing" nopin="nopin">
 		<h3>STRATEGIC DISTANCING</h3>
-		<p>You've heard that a weapon (or any tool) should be treated as an extension of yourself. But, that advice is pretty abstract and hard to use if you don't understand how to make that happen. This curriculum emphasizes the generation of power in core muscle groups and the orientation of the limbs to reduce wasted and contradictory motions which diminish and misdirect energy. In this way, the student learns to extend force from their center, through the limbs, through the weapon, and into the target.</p>
+		<p>Pole arms are less nimble than most other weapons and even unarmed opponents. The disadvantage of reduced agility is compensated for by increased range and leverage. This curriculum teaches the student to use the versatile range of the staff to its maximum efficacy. By keeping the opponent guessing about the boundary of the fight, the student overcomes their reduced agility through capitalizing on a different advantage. It is much easier said than done. These classes will show you how.</p>
 
 		<img class="graphics__slide" src="img/dexterity.jpg" alt="maintain your defense through dexterity" nopin="nopin">
 		<h3>WEAPONS CONTROL &#38; RETENTION</h3>
 		<p>The staff can be a cumbersome tool to wield — more advanced pole arms are even more so. Poor grip shape during a clash, or even a strike, can send your staff flying out of your control. In these classes, the student will learn what facilitates consistent control of the weapon, especially while clashing and parrying with opponents.</p>
+
+		<div class="small-space"></div><hr><div class="small-space"></div>
 
 		<div class="ui__question-box">
 			<div id="q-started class="ui__question-top">
 				<h4 class="ui__question">How do I get started?</h4>	
 			</div><!-- QUESTION TOP -->
 			<div id="a-started" class="ui__question-bottom ui__closed">
-				<p>No need to enroll or RSVP, check the calendar here, find a class that you can make it to, and show up. For the first class, come a few minutes early to go over a little bit of paperwork and then you're all set.</p>
+				<p>No need to enroll or RSVP, <a href="https://calendar.google.com/calendar/embed?src=kitsune%40yokaigumi.com&ctz=America%2FDenver" target="_blank">check the calendar here</a>, find a class that you can make it to, and show up. At the beginning of your first class, you'll have just a couple minutes of paperwork and then you're all set.</p>
 			</div><!-- QUESTION BOTTOM -->
 		</div><!-- GETTING STARTED -->
 
@@ -101,12 +103,25 @@
 		<div class="layout__closing">
 			<p>Hope to see you soon,</p>
 
-			<p>Deacon Rodda<br>
+			<div class="small-space"></div>
+			<p><strong>Deacon Rodda</strong><br>
 			2nd Dan Kurai Kotori Ryu</p>
 
+			<p>email me: <a href="mailto:deacon@sqglz.com">deacon@sqglz.com</a><br>
+			text me: <a href="sms:1-303-501-7244">(303) 501-7244</a></p>
+
 			<div class="layout__link-box">
-				
+				<div class="small-space"></div>
+
+				<p>The Yokai Gumi seeks to empower many generations to come, not only to survive the conflicts and trials ahead but to be worthy of surviving — and to enjoy it. Please consider attending a class and contributing to our mission through Patreon.</p>
+				<p><a href="https://www.patreon.com/sqglz" target="_blank">Patreon</a><br>
+				<a href="https://calendar.google.com/calendar/embed?src=kitsune%40yokaigumi.com&ctz=America%2FDenver" target="_blank">Class Schedule</a></p>
 			</div><!-- LINK BOX -->
+
+			
+
+			<div class="large-space"></div>
+
 		</div><!-- CLOSING -->
 
 
